noinst_LTLIBRARIES = nuclear.la

nuclear_la_CPPFLAGS = -I$(top_srcdir)/src \
												 -I$(includedir)/JAGS

nuclear_la_LDFLAGS = -no-undefined -module -avoid-version

nuclear_la_SOURCES = sfactor3Hedp.cc  sfactorTdn.cc sfactor3Hedp_5p.cc  sfactorTdn_5p.cc

noinst_HEADERS = sfactor3Hedp.h   sfactorTdn.h sfactor3Hedp_5p.h   sfactorTdn_5p.h
