noinst_LTLIBRARIES = nuclear.la

nuclear_la_CPPFLAGS = -I$(top_srcdir)/src \
												 -I$(includedir)/JAGS

nuclear_la_LDFLAGS = -no-undefined -module -avoid-version

nuclear_la_SOURCES = sfactor3Hedp.cc  sfactorTdn.cc  sfactorTdn2.cc sfactorTdn3.cc 

noinst_HEADERS = sfactor3Hedp.h   sfactorTdn.h    sfactorTdn2.h sfactorTdn3.h
